# power-ansible

./: .gitignore  POWER.md  README.md  mcp.json  mcp_server.py  pyproject.toml  requirements.txt  run_mcp.sh
ansible_mcp/: server.py
hooks/: ansible-lint-on-save.kiro.hook
power_ansible/: __init__.py  server.py
steering/: ansible-best-practices.md  ansible-collections.md  ansible-config.md  ansible-inventory.md  ansible-jinja.md  ansible-playbook-workflow.md  ansible-role-structure.md  ansible-vault.md
