[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "power-ansible"
version = "0.1.0"
description = "Ansible MCP server for Kiro"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.20.0",
    "ansible-core>=2.18.0,<2.21",
    "ansible-lint>=25.0.0",
]

[project.scripts]
power-ansible = "power_ansible.server:main"

[tool.hatch.build.targets.wheel]
packages = ["power_ansible"]
