[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansible-mcp"
version = "0.1.0"
description = "Ansible MCP server for Kiro"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.20.0",
    "ansible-core>=2.18.0",
    "ansible-lint>=25.0.0",
]

[project.scripts]
ansible-mcp = "ansible_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ansible_mcp"]
